--- a/sass/revamp-design/_case-study-detail.sass
+++ b/sass/revamp-design/_case-study-detail.sass
@@ -148,47 +148,6 @@
       &:hover
         +background(linear-gradient(top, #18455f, $text-blue))
 
-  &.ds-2col > .group-right
-    @extend %bg-border-and-box-shadow
-    padding: 26px
-  .field-name-field-author-sunet-id-reference
-    border-top: 9px solid $teal-light
-    margin-top: -26px
-    padding-top: 12px
-    .label-above
-      font-family: $font-demi
-      font-size: 14px
-      line-height: 1
-      margin-bottom: 16px
-    .ds-1col
-      img
-        float: none
-        height: 130px
-        width: 130px
-        margin-right: 20px
-        margin-bottom: 20px
-        margin-top: 26px
-
-      .group-wrapper-name
-        font-size: 20px
-        font-family: $font-demi
-        font-weight: normal
-        line-height: 1.2
-        margin-left: 0
-        a
-          color: $link-green
-          font-family: $font-demi
-          font-size: 20px
-          line-height: 1.2
-          &:hover
-            color: $link-blue
-          &:after
-            content: "w"
-            font-family: "gsb"
-            font-size: 17px
-            line-height: 0
-
-      .group_wrapper_position
-        font-family: $font-demi
-        font-size: 20px
-        line-height: 1.2
+  // Author block
+  .group-right
+    +author-block
